--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,12 +1,18 @@
 # Sample Authors
 # Remove file or replace with your own
 
-Tiffany Addo:
-  name: Tiffany
-  picture: /images/girl.jpg
+Billy Rick:
+  name: Billy Rick
+  picture: /images/bio-photo-2.jpg
+  twitter: "@billyrick"
   links:
-    - title: Facebook
-      url: https://www.facebook.com/profile.php?id=100009574189041
-      icon: fab fa-facebook-square
+    - title: Twitter
+      url: https://twitter.com/billyrick
+      icon: fab fa-twitter-square
+
+Cornelius Fiddlebone:
+  name: Cornelius Fiddlebone
+  picture: /images/bio-photo.jpg
+  twitter: corneliusfiddlebone
 
 
